changes made to main page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simplefolio",
+  "name": "omkarportfolio",
   "version": "1.0.1",
   "private": "true",
   "description": "A clean, beautiful and responsive portfolio template for Developers!",
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/cobidev/simplefolio"
   },
   "keywords": [],
-  "author": "Jacobo Martinez",
+  "author": "Omkar Vashistha",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/cobidev/simplefolio/issues"
