--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/cobidev/simplefolio#readme",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.0.1",
+    "@parcel/transformer-sass": "^2.12.0",
     "parcel": "^2.0.1",
     "prettier": "^2.4.1"
   },
@@ -28,6 +28,7 @@
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "motion": "^10.18.0",
     "popper.js": "^1.16.1",
     "vanilla-tilt": "^1.7.2"
   }
