--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/cobidev/simplefolio#readme",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.12.0",
-    "parcel": "^2.0.1",
+    "parcel": "^2.12.0",
     "prettier": "^2.4.1"
   },
   "dependencies": {
@@ -30,6 +30,7 @@
     "jquery": "^3.6.0",
     "motion": "^10.18.0",
     "popper.js": "^1.16.1",
+    "terser": "^5.36.0",
     "vanilla-tilt": "^1.7.2"
   }
 }
